--- a/docker-compose.yml.dist
+++ b/docker-compose.yml.dist
@@ -19,6 +19,8 @@ services:
     restart: always
     ports:
       - 8080:8080
+    depends_on:
+      - db
   api-store:
     container_name: api-store
     build: ./api_store
